# oxide

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: rust-mut-reviewer.md
docker/: linux-x86_64.Dockerfile
docs/: README.md  book.toml  lowerer_passes.md  wrangler.jsonc
docs/src/: 01_walkthrough.md  SUMMARY.md  install.sh
example-projects/basic/: 01_add.ll  02_locals.ll  02_locals.ox  03_if.ll  03_if.ox  compile.sh
example-projects/c/: 01_add.ll  02_locals.c  02_locals.ll  03_if.c  03_if.ll  04_loop.c  04_loop.ll  05_struct.c  05_struct.ll  compile.sh
example-projects/fib/: fib.ll  fib.ox  run.sh
example-projects/flappy/: flappy  run.sh  (+1 more)
examples/: oxide-codegen-example.rs  oxide-hir-example.rs  oxide-lexer-example.rs  oxide-parser-example.rs  oxide-typeck-example.rs
scripts/: build-all.sh  build-release.sh  deploy.sh  publish.sh
spec/: 01_LEXER.md  03_PARSER.md  04_HIR.md  05_TYPE_CHECKER.md  06_LLVM_CODEGEN.md  07_POINTER.md  08_ADT.md  09_ARRAY.md  10_ADDRESS_OF.md  11_MUTABILITY.md  12_AS.md  13_LOOPS.md  14_MODULES.md  15_VARIADIC.md  16_GENERIC.md  17_LAYOUT.md  18_CONST.md  19_FN_PTR.md  PARSER.md  REPORTER.md
src/: config.rs  lib.rs  session.rs
stdlib/: intrinsics.ox  mem.ox  stdio.ox  stdlib.ox  string.ox
tests/: builder.rs  codegen.rs  codegen_snapshot.rs  hir.rs  hir_snapshot.rs  jit_snapshot.rs  layout_helpers.rs  lexer.rs  loader.rs  mono_snapshot.rs  parser.rs  parser_snapshot.rs  reporter.rs  splitter.rs  stdlib.rs  typeck.rs  typeck_snapshot.rs
(+1305 files in other folders)
